src/test/ui/associated-types/defaults-cyclic-fail-1.stderr
error[E0275]: overflow evaluating the requirement `<bool as Tr>::B`
  --> $DIR/defaults-cyclic-fail-1.rs:26:5
   |
LL |     type A = Box<Self::B>;
   |     ^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size

error[E0275]: overflow evaluating the requirement `<usize as Tr>::A`
  --> $DIR/defaults-cyclic-fail-1.rs:32:5
   |
LL |     type B = &'static Self::A;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ cyclic type of infinite size

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0275.
For more information about an error, try `rustc --explain E0271`.
